--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <a href="./index.html">← Back</a>
     </nav>
     <div id="outer">
-        <div>
+        <div class="intro">
             **Text that would explain usage rights for photos. It would credit S.T.A.R.S. and all the studios/photographers involved and also provide contact details for people to get in touch with questions including requests to remove images of loved ones or to add information about loved ones.**
 
 
