--- a/cluster_2.html
+++ b/cluster_2.html
@@ -13,7 +13,7 @@
     </nav>
     <div id="outer">
     <p id="instructions">
-        Click and drag a layer to view it's provenance.<br>
+        <span id="desktop-only">Click and drag a layer to view it's provenance.</span><span id="mobile-only">Click and hold a layer to view it's provenance.</span><br>
         <a href="./cluster_2.html">Click here to reset→</a>             
     </p>
     <div id="inner">
