--- a/cluster_6.html
+++ b/cluster_6.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="loader" class="on"><p>loading...</p></div>
     <nav>
         <a href="./clusters.html">← Back to all Clusters</a>
     </nav>
     <div id="outer">
     <p id="instructions">
-        Click and drag a layer to view it's provenance.<br>
+        <span id="desktop-only">Click and drag a layer to view it's provenance.</span><span id="mobile-only">Click and hold a layer to view it's provenance.</span><br>
         <a href="./cluster_6.html">Click here to reset→</a>             
     </p>
     <div id="inner">
