--- a/cluster_12.html
+++ b/cluster_12.html
@@ -14,11 +14,11 @@
     </nav>
     <div id="outer">
     <p id="instructions">
-        <span id="desktop-only">Click and drag a layer to view it's provenance.</span><span id="mobile-only">Click and hold a layer to view it's provenance.</span><br>
+        <span id="desktop-only">Click and drag a layer to view it's provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
         <a href="./cluster_12.html">Click here to reset→</a>             
     </p>
     <div id="inner">
-        <div id="wrapper">
+        <div class="brightless" id="wrapper">
             <a href="./cluster_12.html" id="over">You've reached the last layer. Click to restart</a>
         </div>
         <div id="text">
