--- a/cluster_3.html
+++ b/cluster_3.html
@@ -14,7 +14,7 @@
     </nav>
     <div id="outer">
     <p id="instructions">
-        <span id="desktop-only">Click and drag a layer to view it's provenance.</span><span id="mobile-only">Click and hold a layer to view it's provenance.</span><br>
+        <span id="desktop-only">Click and drag a layer to view it's provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
         <a href="./cluster_3.html">Click here to reset→</a>             
     </p>
     <div id="inner">
