--- a/clusters.html
+++ b/clusters.html
@@ -14,6 +14,9 @@
     <div id="outer">
     
         <div id="clusters">
+            <div></div><div></div><a href="./cluster_12.html"></a><a href="./cluster_1.html"></a><a href="./cluster_2.html"></a><div></div><div></div><a href="./cluster_7.html"></a><a href="./cluster_3.html"></a><a href="./cluster_9.html"></a><p id="instructions-clusters"><span>Select a Cluster to explore its individual photographs.</span></p><a href="./cluster_7.html"></a><a href="./cluster_6.html"></a><a href="./cluster_4.html"></a><div></div><div></div><a href="./cluster_11.html"></a><a href="./cluster_5.html"></a><a href="./cluster_10.html"></a><div></div><div></div>
+        </div>
+        <div id="clusters-mobile">
             <p id="instructions-clusters">Select a Cluster to explore its individual photographs.</p>
             <a href="./cluster_1.html"><img src="./assets/1/averaged.png" alt=""></a>
             <a href="./cluster_2.html"><img src="./assets/2/averaged.png" alt=""></a>
