--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>A·kin</title>
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 
 </head>
@@ -15,14 +15,13 @@
     </nav>
     <div id="outer">
         <div class="intro">
-            **Text that would explain usage rights for photos. It would credit S.T.A.R.S. and all the studios/photographers involved and also provide contact details for people to get in touch with questions including requests to remove images of loved ones or to add information about loved ones.**
+            <p>We invite you to get in touch to share additional information, send any question or request the removal of images of loved ones (***LINK TO EMAIL/FORM***)
+            </p>
+            <p>A list of all the photography studios can be found here (***LINK TO THE LIST OF STUDIOS***).
+            </p>
+<p>A·kin is a project by Aarati Akkapeddi in collaboration with stars.archive, and commissioned by The Photographers’ Gallery.
+</p>
 
-
-            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            Tortor Condimentum Mattis
-            https://Venenatis.fringella
-            Vestibulum@Sollicitudin
-            aarati.akkapeddi@gmail.com
             <br>
         <a href="./clusters.html">Continue →</a>
         </div>
