--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>A·kin</title>
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 
 </head>
 <body>
     <div id="outer">
         <div class="intro">
-            **Text that would explain usage rights for photos. It would credit S.T.A.R.S. and all the studios/photographers involved and also provide contact details for people to get in touch with questions including requests to remove images of loved ones or to add information about loved ones.**
-
-            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            Tortor Condimentum Mattis
-            https://Venenatis.fringella
-            Vestibulum@Sollicitudin
-            aarati.akkapeddi@gmail.com
+            <p>
+            <strong>A·kin</strong> is a project by <a href="https://aarati.online">Aarati Akkapeddi</a> exploring human and non-human categorisation of photographic archives. The work highlights issues in grasping anthropological, historical and cultural notions about personal and collective identity when photographs are considered as mere data points.
+            </p>
+            <p>
+            A·kin takes artist Aarati Akkapeddi’s family photo album as its starting point. Akkapeddi combines these personal photographs, from the south Indian state Tamil Nadu, with images from the <a href="https://stars.hypotheses.org/">Studies in Tamil Studio Archives and Society Archive</a> (stars.archive), a collection which investigates the history of South Indian studio photography between the 1880s and the 1980s.
+            </p>
+            <p>The installation at The Photographers’ Gallery Archive Display takes the shape of a Kolam, where patterns are traditionally drawn with rice flour by women on their home entrance to welcome all but the evil spirits. In this case, the kolam is formed by groupings of photographs organised on a grid by an image classification algorithm, and assembled on clusters by Akkapeddi’s own artistic intervention. Each group is represented by a central image, a composite averaging all of the images within the cluster. At the centre of the wall <a href="/video.html">a video</a> includes oral interviews with family members reflecting on the diasporic identity. Stars.archive researchers also share insights on the particularities of eastern studio archives and family albums in relation to a more western view.</p>
             <br>
         <a href="./contact.html">Continue →</a>
         </div>
