--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,11 @@
     </nav>
     <div id="outer">
         <div class="intro">
-            <p>We invite you to get in touch to share additional information, send any question or request the removal of images of loved ones (***LINK TO EMAIL/FORM***)
+            <br>
+            <p>We invite you to <a style="margin-top:0;" href="mailto:aarati.akkapeddi@gmail.com">get in touch</a> to share additional information, send any question or request the removal of images of loved ones.
             </p>
-            <p>A list of all the photography studios can be found here (***LINK TO THE LIST OF STUDIOS***).
+            <p>A list of all the photography studios can be found <a style="margin-top:0;" href="/studios.html">here</a>.</p><p>A·kin is a project by Aarati Akkapeddi in collaboration with stars.archive, and commissioned by The Photographers’ Gallery.
             </p>
-<p>A·kin is a project by Aarati Akkapeddi in collaboration with stars.archive, and commissioned by The Photographers’ Gallery.
-</p>
-
             <br>
         <a href="./clusters.html">Continue →</a>
         </div>
