--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 </head>
 <body>
+
+        <img class='kolam' src="./kolam.svg">
     <div id="outer">
         <div class="intro">
+            <br>
             <p>
             <strong>A·kin</strong> is a project by <a href="https://aarati.online">Aarati Akkapeddi</a> exploring human and non-human categorisation of photographic archives. The work highlights issues in grasping anthropological, historical and cultural notions about personal and collective identity when photographs are considered as mere data points.
             </p>
