phew adds a lot of information

--- a/cluster_1.html
+++ b/cluster_1.html
@@ -7,7 +7,7 @@
     <title>A·kin</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="one">
     <div id="loader" class="on"><p>loading...</p></div>
     <nav>
         <a href="./clusters.html">← Back to all Clusters</a>
@@ -28,9 +28,8 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 1</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
-        </div>
+            <h1>People posing with an Anjali or Namaskar Mudra - a hand gesture used as a respectful greeting and in spiritual practice.</h1><p>Composite comprised of 7 photographs from the stars.archive. Only the source of one image has been identified as originating from the R. Dasen studio in Karaikudi, while the rest remain unidentified.<br><br>“This pose stands out to me as distinct from other poses because of its religious significance. I'm immediately familiar with the idea of taking photographs to commemorate birthdays and marriages, but arranging this grouping reminded me that there are also many spiritual occasions as well. In fact, because of a sign in the background of one of the photographs in the cluster, I can assume the photograph is of Ayyappan Devotees that may be commemorating the start of, or return from, a pilgrimage to Kerala – a state in southern India.” </p>
+         </div>
     </div>
 
 
