--- a/cluster_10.html
+++ b/cluster_10.html
@@ -26,8 +26,7 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 10</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+          <h1>Close-up portrait of a couple where the woman is on the left-hand side of the image.</h1><p>Composite of 14 photographs from R. Dasen Studio and Sundram Studio in Karaikudi, Tamilnadu Studio and Victoria Studio in Madurai,The City Photo Works in Pondicherry, Natarajan Photo Studio in Villupuram and other unidentified studios. One of the images is from the artist's family archive, the rest are from stars.archive.<br><br>“In my own family album, photographs of weddings or of couples shortly after marriage are probably the most common archetype. It makes me think of the cultural and financial significance placed on marriage. In the stars.archive I noticed many images of what appear to be portraits of married couples. I'm also interested in whether the wife is on the husband's left or right. Anecdotally, my grandmother mentioned to me that in Tamil, ‘இடம் means left. இடம் also means place. So, if you give இடம் to your wife, she will take your place.’  However, despite this, I did see a few photographs with wives to the left of their husbands. In these close-up portraits, you can also really see details like nose rings, flowers, textile patterns, ties, or the presence/absence of a bindi.”</p>
         </div>
     </div>
     </div>
