--- a/cluster_2.html
+++ b/cluster_2.html
@@ -9,7 +9,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 
 </head>
-<body>
+<body id="two">
     <div id="loader" class="on"><p>loading...</p></div>
     <nav>
         <a href="./clusters.html">← Back to all Clusters</a>
@@ -26,8 +26,7 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 2</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+           <h1>Large group photo (class portraits, team portraits, perhaps colleagues, or even large extended families).</h1><p>Composite of 37 photographs from City Camera House, The City Photo Works, Crown Studio, and Raju's Studio in Coimbatore, R. Dasen Studio and Sundram Studio in Karaikudi, Tamilnadu Studio, Victoria Studio, and New Studio in Madurai, C.P. Studio, Vyas Studio and G.P. Swami Studio in Thanjavur, Navajeevan Studio in Theni, Shanthi Studio and Venus Studio in Ulundurpet and other unidentified studios. One of the images is from the artist's family archive, the rest are from stars.archive.<br><br>“In the images in this cluster that are not large extended families, the social relationships between people outside of the family are revealed. They could be class portraits, sports teams, religious congregations, or colleagues. One image is of my uncle's volleyball team. I believe the image is of note in that it depicts people of varying socio-economic backgrounds together.” </p>
         </div>
     </div>
     </div>
