--- a/cluster_5.html
+++ b/cluster_5.html
@@ -26,8 +26,7 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 5</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+           <h1>Family portrait with a young child in the centre.</h1><p>Composite of 14 photographs, 13 of them from the stars.archive and one from the artist’s family albums. Images included from R. Dasen Studio in Karaikudi, Victoria Studio and Tamilnadu Studio in Madurai, Leo Photo Works Studio in Pondicherry, Guhan Studio in Chennai and Mahadev Bros Studio in Tiruppur as well as unidentified sources.<br><br>“Many family portraits in the stars.archive feature the youngest child in the centre of the group. Children also show specific traditions and rituals such as head shaving ­i, or applying கண்மை which in Tamil means eyeliner, or a dot to the side of the face to ward off the evil eye.“</p>
         </div>
     </div>
     </div>
