--- a/cluster_6.html
+++ b/cluster_6.html
@@ -9,7 +9,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 
 </head>
-<body>
+<body id="one">
     <div id="loader" class="on"><p>loading...</p></div>
     <nav>
         <a href="./clusters.html">← Back to all Clusters</a>
@@ -26,8 +26,7 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 6</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+           <h1>Women posing with a mirror to show off their elaborate hair braiding and flowers.</h1><p>Composite of 5 photographs, all from the stars.archive. Images made in New Studio in Madurai, Sri Devi Studio in Pattukkottai and Chitra Studio in Villupuram are featured with others from unidentified sources.<br><br>“My mother was too young in many of the studio photographs to remember the experience. But she did recall having flowers stitched into her hair before having a photo taken with her cousins. I was particularly intrigued by images in the stars.archive where a mirror was used to also show the back view of the women's hair in the portrait.”</p>
         </div>
     </div>
     </div>
