--- a/cluster_7.html
+++ b/cluster_7.html
@@ -9,7 +9,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 
 </head>
-<body>
+<body id="one">
     <div id="loader" class="on"><p>loading...</p></div>
     <nav>
         <a href="./clusters.html">← Back to all Clusters</a>
@@ -26,8 +26,7 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 7</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+           <h1>Close-up portrait of a woman</h1><p>Composite of 11 photographs from Crown Studio and The City Photo Works in Coimbatore, R. Dasen Studio in Karaikudi, New Studio in Madurai, Guhan Studio in Chennai, and other unidentified studios. Three of the images are from the artist's family archive, the rest are from stars.archive.<br><br>“I was struck by the scarcity of images in comparison with its sibling cluster of close-up portraits of men. Two images in this cluster are ID photos of my mom and one is what we believe to be either a school portrait or portrait used in matchmaking of my grandmother. It also seems as if a few of these images may have originally been group photos where the individual was isolated using a photo manipulation technique called vignetting. In these close-up portraits, you can also really see details like nose rings, flowers, textile patterns, ties, or the presence/absence of a bindi. For example, I know my grandmother's portrait was taken before marriage because she is missing a special type of necklace worn by Telugu women after marriage.” </p>
         </div>
     </div>
     </div>
