--- a/cluster_8.html
+++ b/cluster_8.html
@@ -26,8 +26,7 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 8</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+          <h1>Portrait of a seated man.</h1><p>Composite of 12 photographs from R. Dasen Studio in Karaikudi, Tamilnadu Studio and New Studio in Madurai, and other unidentified studios. One of the images is from the artist's family archive, the rest are from stars.archive.<br><br>“In this cluster, there seems to be almost as many images as there are in its sibling cluster of individual portraits of women. It does seem that a few of the images could've been originally group photographs and a photo manipulation technique called vignetting was used to isolate the individual. One of these images is of my grandfather before he left for the United States the first time. I wonder if any of the other younger men in this cluster were also leaving home after these portraits were taken.”</p>
         </div>
     </div>
     </div>
