--- a/cluster_9.html
+++ b/cluster_9.html
@@ -26,8 +26,7 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 9</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+            <h1>Children posing with an object for support, usually a side table with flowers.</h1><p>Composite of 14 photographs, 11 of them from the stars.archive and 3 from the artist’s family albums. Images include those from R. Dasen Studio in Coimbatore, Sundram Studio in Karaikudi, Victoria Studio in Madurai, Naidu & Sons Studio in Nagapattinam, Navakodi Studio in Thanjavur and Newtone Studio in Thoothukudi and others from unidentified sources.<br><br>“This archetype is actually not unique to Tamil photography. It points to longer exposure times where accessories, such as furniture, became a way to stabilize the subject. The objects themselves are interesting in that some in this cluster use ‘neoclassical’ backdrops such as pillars or carved wooden tables, but some are மோடா, a type of stool made from bamboo, or other rattan furniture.”</p>
         </div>
     </div>
     </div>
