--- a/cluster_12.html
+++ b/cluster_12.html
@@ -9,7 +9,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 
 </head>
-<body>
+<body id="twelve">
     <div id="loader" class="on"><p>loading...</p></div>
     <nav>
         <a href="./clusters.html">← Back to all Clusters</a>
@@ -26,8 +26,7 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 12</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+            <h1>Close-up portrait of a man.</h1><p>Composite of 68 photographs from Guhan Studio in Chennai, Ramu Studio, Seenu Studio, and Crown Studio in Coimbatore, Metro Studio in Erode, R. Dasen Studio and Sundram Studio in Karaikudi, Tamilnadu Studio, Victoria Studio, and New Studio in Madurai, Lakshmi Studio in Mayiladuthurai, Raju's Electric Studio and Ponnaiah Studio in Pollachi, Leo Photo Works and Star Studio in Pondicherry, Everest Studio in Thanjavur and other unidentified studios. 13 of the images are from the artist's family archive, the rest are from stars.archive.<br><br>“There are multitudes of images in comparison with its sibling cluster of close-up portraits of women. Many of these images seem to be ID photographs for official purposes such as work, school, or travel. A few seem to be manipulated using a technique called vignetting or overpainted with colors.”</p>
         </div>
     </div>
     </div>
