--- a/cluster_4.html
+++ b/cluster_4.html
@@ -26,8 +26,7 @@
         </div>
 
         <div id="text">
-            <h1>Cluster 4</h1>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor.</p>
+            <h1>Portrait of a seated woman.</h1><p>Composite of 13 photographs from R. Dasen Studio in Karaikudi, Victoria Studio in Madurai, Thangam Studio in Pattukkottai, Muthuvel Studio in Thanjavur, and other unidentified studios – all from the stars.archive.<br><br>“I have so many individual portraits of the men in my family but very few of my matriarchs, especially those that aren't ID photographs. A few of the photos in this cluster could actually be group photos that have been edited by studio photographers using a technique called vignetting.”</p>
         </div>
     </div>
     </div>
