--- a/cluster_9.html
+++ b/cluster_9.html
@@ -9,7 +9,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 
 </head>
-<body>
+<body id="two">
     <div id="loader" class="on"><p>loading...</p></div>
     <nav>
         <a href="./clusters.html">← Back to all Clusters</a>
@@ -17,20 +17,20 @@
     <div id="outer">
     <p id="instructions">
         <span id="desktop-only">Click and drag a layer to view it's provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
-        <a href="./cluster_9.html">Click here to reset→</a>             
+        <a href="./cluster_2.html">Click here to reset→</a>             
     </p>
     <div id="inner">
         <div id="history"><p id="hist-label">Layer History (click to return to an image):</p><div id="history-icons"></div></div>
         <div id="wrapper">
-            <a href="/cluster_9.html" id="over">You've reached the last layer. Click to restart</a>
+            <a href="/cluster_2.html" id="over">You've reached the last layer. Click to restart</a>
         </div>
 
         <div id="text">
-            <h1>Children posing with an object for support, usually a side table with flowers.</h1><p>Composite of 14 photographs, 11 of them from the stars.archive and 3 from the artist’s family albums. Images include those from R. Dasen Studio in Coimbatore, Sundram Studio in Karaikudi, Victoria Studio in Madurai, Naidu & Sons Studio in Nagapattinam, Navakodi Studio in Thanjavur and Newtone Studio in Thoothukudi and others from unidentified sources.<br><br>“This archetype is actually not unique to Tamil photography. It points to longer exposure times where accessories, such as furniture, became a way to stabilize the subject. The objects themselves are interesting in that some in this cluster use ‘neoclassical’ backdrops such as pillars or carved wooden tables, but some are மோடா, a type of stool made from bamboo, or other rattan furniture.”</p>
+           <h1>Large group photo (class portraits, team portraits, perhaps colleagues, or even large extended families).</h1><p>Composite of 37 photographs from City Camera House, The City Photo Works, Crown Studio, and Raju's Studio in Coimbatore, R. Dasen Studio and Sundram Studio in Karaikudi, Tamilnadu Studio, Victoria Studio, and New Studio in Madurai, C.P. Studio, Vyas Studio and G.P. Swami Studio in Thanjavur, Navajeevan Studio in Theni, Shanthi Studio and Venus Studio in Ulundurpet and other unidentified studios. One of the images is from the artist's family archive, the rest are from stars.archive.<br><br>“In the images in this cluster that are not large extended families, the social relationships between people outside of the family are revealed. They could be class portraits, sports teams, religious congregations, or colleagues. One image is of my uncle's volleyball team. I believe the image is of note in that it depicts people of varying socio-economic backgrounds together.” </p>
         </div>
     </div>
     </div>
     <script src="./p5.min.js"></script>
-    <script src="./9.js"></script>
+    <script src="./2.js"></script>
 </body>
 </html>
