--- a/clusters.html
+++ b/clusters.html
@@ -34,5 +34,7 @@
             <a href="./cluster_12.html"><img src="./assets/12/averaged.png" alt=""></a>   
         </div>
     </div>
+    <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
+ id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
 </body>
 </html>
