--- a/studios.html
+++ b/studios.html
@@ -57,5 +57,7 @@
 
         </ul>
     </div>
+    <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
+ id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
 </body>
 </html>
