--- a/tsne.html
+++ b/tsne.html
@@ -1016,7 +1016,7 @@
             <li>999	toilet tissue, toilet paper, bathroom tissue</li>
         </ul>
 
-        The actual categorisation of images is often incorrect as you can see below. 
+        The actual categorisation of images is often incorrect as you can see below.<br> 
         <img src="assets/tsne/erode_2022-08-21_1650___ERODE___11A___RAVIVARMA STUDIO___ERODE_11A_RAVIVARMA STUDIO_2016_00001.nef.jpg"/>
         <ul>
             <li><em>predicted kimono with probability 0.835</em></li>
@@ -1192,13 +1192,13 @@ is:
    -5.93690991e-01 -1.79873213e-01  1.92424357e+00  6.48455679e-01
    -1.77089557e-01 -5.82734048e-01 -9.92835402e-01  1.03992963e+00]
 </div>
-
+<br>
 The distance between these two embeddings (using <a href='https://en.wikipedia.org/wiki/Cosine_similarity'>Cosine Similarity</a>, a mathematical method of measuring similarity between two sets of numbers) is 0.33302491903305054.<br><br>
 Whereas, if we compare the embedding for the first image and the one for this image:<br>
 <img src="assets/tsne/miscellaneous_m8_2015_00007-xmp_2022-08-23_1430___MISCELLANEOUS_M8_2015_00042.nef.jpg"/>
 <br>
 The distance between the embeddings is much higher at 1.0102533549070358.
-<br>
+<br><br>
 <p>
  Using these calculations, we can arrange all the images according to similarity as with the grid you see in the background. Looking at this grid, I intuitively started to map out groupings I saw. For example, I saw close-cropped portraits of men, or images with large standing mirrors. I also tried to value meaning over the numbers of images within a cluster. Even though there might've been fewer images in a grouping, if that group of images illustrated a cultural aspect I wanted to give space to, such as the images with standing mirrors that reveal the intricate stitching of flowers into a woman's hair, I included it as a cluster.</p>
 
@@ -1209,5 +1209,7 @@ The distance between the embeddings is much higher at 1.0102533549070358.
 
     </div>
     <script src="tsne.js"></script>
+    <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
+ id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
 </body>
 </html>
