--- a/cluster_11.html
+++ b/cluster_11.html
@@ -33,5 +33,7 @@
     </div>
     <script src="./p5.min.js"></script>
     <script src="./11.js"></script>
+    <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
+ id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
 </body>
 </html>
