--- a/cluster_12.html
+++ b/cluster_12.html
@@ -32,5 +32,7 @@
     </div>
     <script src="./p5.min.js"></script>
     <script src="./12.js"></script>
+    <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
+ id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
 </body>
 </html>
