--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,7 @@
         <a href="./clusters.html">Continue →</a>
         </div>
     </div>
+    <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
+ id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
 </body>
 </html>
