changes homepage and nav

--- a/cluster_9.html
+++ b/cluster_9.html
@@ -12,7 +12,10 @@
 <body id="two">
     <div id="loader" class="on"><p>loading...</p></div>
     <nav>
-        <a href="./clusters.html">← Back to all Clusters</a>
+        <a href="./"><img class='kolam' src="./kolam.svg"></a>
+        <a href="./about.html">About</a>
+        <a href="./video.html">Video</a>
+        <a href="./tsne.html">Categorisation</a>
     </nav>
     <div id="outer">
     <p id="instructions">
