--- a/index.html
+++ b/index.html
@@ -10,20 +10,31 @@
 
 </head>
 <body>
-
-        <img class='kolam' src="./kolam.svg">
+    <nav>
+        <a href="./"><img class='kolam' src="./kolam.svg"></a>
+        <a href="./about.html">About</a>
+        <a href="./video.html">Video</a>
+        <a href="./tsne.html">Categorisation</a>
+    </nav>
     <div id="outer">
-        <div class="intro">
-            <br>
-            <p>
-            <strong>A·kin</strong> is a project by <a href="https://aarati.online">Aarati Akkapeddi</a> exploring human and non-human categorisation of photographic archives. The work highlights issues in grasping anthropological, historical and cultural notions about personal and collective identity when photographs are considered as mere data points.
-            </p>
-            <p>
-            A·kin takes artist Aarati Akkapeddi’s family photo album as its starting point. Akkapeddi combines these personal photographs, from the south Indian state Tamil Nadu, with images from the <a href="https://stars.hypotheses.org/">Studies in Tamil Studio Archives and Society Archive</a> (stars.archive), a collection which investigates the history of South Indian studio photography between the 1880s and the 1980s.
-            </p>
-            <p>The installation at The Photographers’ Gallery Archive Display takes the shape of a Kolam, where patterns are traditionally drawn with rice flour by women on their home entrance to welcome all but the evil spirits. In this case, the kolam is formed by groupings of photographs organised on a grid by an image classification algorithm, and assembled on clusters by Akkapeddi’s own artistic intervention. Each group is represented by a central image, a composite averaging all of the images within the cluster. At the centre of the wall <a href="/video.html">a video</a> includes oral interviews with family members reflecting on the diasporic identity. Stars.archive researchers also share insights on the particularities of eastern studio archives and family albums in relation to a more western view.</p>
-            <br>
-        <a href="./contact.html">Continue →</a>
+    
+        <div id="clusters">
+            <div></div><div></div><a href="./cluster_12.html"></a><a href="./cluster_1.html"></a><a href="./cluster_9.html"></a><div></div><div></div><a href="./cluster_8.html"></a><a href="./cluster_3.html"></a><a href="./cluster_2.html"></a><p id="instructions-clusters"><span>Select a Cluster to explore its individual photographs.<br><a href="./video.html">view the video</a></span></p><a href="./cluster_7.html"></a><a href="./cluster_6.html"></a><a href="./cluster_4.html"></a><div></div><div></div><a href="./cluster_11.html"></a><a href="./cluster_5.html"></a><a href="./cluster_10.html"></a><div></div><div></div>
+        </div>
+        <div id="clusters-mobile">
+            <p id="instructions-clusters">Select a Cluster to explore its individual photographs.</p>
+            <a href="./cluster_1.html"><img src="./assets/1/averaged.png" alt=""></a>
+            <a href="./cluster_9.html"><img src="./assets/2/averaged.png" alt=""></a>
+            <a href="./cluster_3.html"><img src="./assets/3/averaged.png" alt=""></a>
+            <a href="./cluster_4.html"><img src="./assets/4/averaged.png" alt=""></a>
+            <a href="./cluster_5.html"><img src="./assets/5/averaged.png" alt=""></a>
+            <a href="./cluster_6.html"><img src="./assets/6/averaged.png" alt=""></a>
+            <a href="./cluster_7.html"><img src="./assets/7/averaged.png" alt=""></a>
+            <a href="./cluster_8.html"><img src="./assets/8/averaged.png" alt=""></a>
+            <a href="./cluster_2.html"><img src="./assets/9/averaged.png" alt=""></a>
+            <a href="./cluster_10.html"><img src="./assets/10/averaged.png" alt=""></a>
+            <a href="./cluster_11.html"><img src="./assets/11/averaged.png" alt=""></a>
+            <a href="./cluster_12.html"><img src="./assets/12/averaged.png" alt=""></a>   
         </div>
     </div>
     <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
