--- a/studios.html
+++ b/studios.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <nav>
-        <a href="./contact.html">← Back</a>
+        <a href="./"><img class='kolam' src="./kolam.svg"></a>
+        <a href="./about.html">About</a>
+        <a href="./video.html">Video</a>
+        <a href="./tsne.html">Categorisation</a>
     </nav>
     <div class="intro">
         <ul>
