--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,11 @@
 </head>
 <body>
     <nav>
-        <a href="./index.html">← Back</a>
+        <a href="./"><img class='kolam' src="./kolam.svg"></a>
+        <a href="./about.html">About</a>
+        <a href="./video.html">Video</a>
+        <a href="./tsne.html">Categorisation</a>
+        <a href="./contact.html">Credits</a>
     </nav>
     <div id="outer">
         <div class="intro">
