--- a/tsne.html
+++ b/tsne.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <nav>
-        <a href="./index.html">← Back</a>
+        <a href="./"><img class='kolam' src="./kolam.svg"></a>
+        <a href="./about.html">About</a>
+        <a href="./video.html">Video</a>
+        <a href="./tsne.html">Categorisation</a>
     </nav>
     <div class="grid-intro intro">
         VGG-16 is a neural network model for object detection and image classification proposed by Karen Simonyan and Andrew Zisserman at the University of Oxford. The pre-trained model is trained on images from <a href="https://www.image-net.org/">ImageNet</a> and uses 1000 classification categories:
