--- a/video.html
+++ b/video.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <nav>
-        <a href="./index.html">← Back</a>
+        <a href="./"><img class='kolam' src="./kolam.svg"></a>
+        <a href="./about.html">About</a>
+        <a href="./video.html">Video</a>
+        <a href="./tsne.html">Categorisation</a>
     </nav>
     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/754509083?h=f290cba9b2&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
