--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
         <a href="./video.html">Video</a>
         <a href="./tsne.html">Categorisation</a>
     </nav>
-    <div id="outer">
-    
+    <div class="cluster-map" id="outer"> 
         <div id="clusters">
-            <div></div><div></div><a href="./cluster_12.html"></a><a href="./cluster_1.html"></a><a href="./cluster_9.html"></a><div></div><div></div><a href="./cluster_8.html"></a><a href="./cluster_3.html"></a><a href="./cluster_2.html"></a><p id="instructions-clusters"><span>Select a Cluster to explore its individual photographs.<br><a href="./video.html">view the video</a></span></p><a href="./cluster_7.html"></a><a href="./cluster_6.html"></a><a href="./cluster_4.html"></a><div></div><div></div><a href="./cluster_11.html"></a><a href="./cluster_5.html"></a><a href="./cluster_10.html"></a><div></div><div></div>
+            <a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_12.html"></a><a href="./cluster_1.html"></a><a href="./cluster_9.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_8.html"></a><a href="./cluster_3.html"></a><a href="./cluster_2.html"></a><p id="instructions-clusters"><span>Select a Cluster to explore its individual photographs.<br><a href="./video.html">view the video</a></span></p><a href="./cluster_7.html"></a><a href="./cluster_6.html"></a><a href="./cluster_4.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_11.html"></a><a href="./cluster_5.html"></a><a href="./cluster_10.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a>
         </div>
         <div id="clusters-mobile">
             <p id="instructions-clusters">Select a Cluster to explore its individual photographs.</p>
@@ -37,6 +36,26 @@
             <a href="./cluster_12.html"><img src="./assets/12/averaged.png" alt=""></a>   
         </div>
     </div>
+    <script>
+       let tsnes = document.querySelectorAll('.tsne');
+       for(let i = 0; i < tsnes.length; i ++){
+        tsnes[i].addEventListener("mouseover", function(){
+            
+            let tsnes = document.querySelectorAll('.tsne');
+                for(let i = 0; i < tsnes.length; i ++){
+                    tsnes[i].classList.add('hovered')
+                }
+                document.getElementById("instructions-clusters").innerHTML = "<span>Select outside the clusters to learn more about the categorisation process.</span>" ;
+        })
+        tsnes[i].addEventListener("mouseout", function(){
+            let tsnes = document.querySelectorAll('.tsne');
+                for(let i = 0; i < tsnes.length; i ++){
+                    tsnes[i].classList.remove('hovered')
+                }
+                document.getElementById("instructions-clusters").innerHTML = "<span>Select a Cluster to explore its individual photographs.<br><a href='./video.html'>view the video</a></span>";
+        })
+       }
+    </script>
     <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
  id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
 </body>
