--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <div class="cluster-map" id="outer"> 
         <div id="clusters">
-            <a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_12.html"></a><a href="./cluster_1.html"></a><a href="./cluster_9.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_8.html"></a><a href="./cluster_3.html"></a><a href="./cluster_2.html"></a><p id="instructions-clusters"><span>Select a Cluster to explore its individual photographs.<br><a href="./video.html">view the video</a></span></p><a href="./cluster_7.html"></a><a href="./cluster_6.html"></a><a href="./cluster_4.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_11.html"></a><a href="./cluster_5.html"></a><a href="./cluster_10.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a>
+            <a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_12.html"></a><a href="./cluster_1.html"></a><a href="./cluster_9.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_8.html"></a><a href="./cluster_3.html"></a><a href="./cluster_2.html"></a><p id="instructions-clusters"><span>Select a Cluster to explore its individual photographs.</span></p><a href="./cluster_7.html"></a><a href="./cluster_6.html"></a><a href="./cluster_4.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a><a href="./cluster_11.html"></a><a href="./cluster_5.html"></a><a href="./cluster_10.html"></a><a class="tsne" href='./tsne.html'></a><a class="tsne" href='./tsne.html'></a>
         </div>
         <div id="clusters-mobile">
             <p id="instructions-clusters">Select a Cluster to explore its individual photographs.</p>
@@ -52,7 +52,7 @@
                 for(let i = 0; i < tsnes.length; i ++){
                     tsnes[i].classList.remove('hovered')
                 }
-                document.getElementById("instructions-clusters").innerHTML = "<span>Select a Cluster to explore its individual photographs.<br><a href='./video.html'>view the video</a></span>";
+                document.getElementById("instructions-clusters").innerHTML = "<span>Select a Cluster to explore its individual photographs.</span>";
         })
        }
     </script>
