--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <p>The installation at The Photographers’ Gallery Archive Display takes the shape of a Kolam, where patterns are traditionally drawn with rice flour by women on their home entrance to welcome all but the evil spirits. In this case, the kolam is formed by groupings of photographs organised on a grid by an image classification algorithm, and assembled on clusters by Akkapeddi’s own artistic intervention. Each group is represented by a central image, a composite averaging all of the images within the cluster. At the centre of the wall <a href="/video.html">a video</a> includes oral interviews with family members reflecting on the diasporic identity. Stars.archive researchers also share insights on the particularities of eastern studio archives and family albums in relation to a more western view.</p>
             <p>We invite you to <a style="margin-top:0;" href="mailto:aarati.akkapeddi@gmail.com">get in touch</a> to share additional information, send any question or request the removal of images of loved ones.
             </p>
-            <p>A list of all the photography studios can be found <a style="margin-top:0;" href="/studios.html">here</a>.</p>
+            <p>A list of all the photography studios can be found <a style="margin-top:0;" href="./studios.html">here</a>.</p>
             <p><em>A·kin is a project by <a href='https://aarati.online'>Aarati Akkapeddi</a> in collaboration with <a href='https://stars.hypotheses.org/'>stars.archive</a>, and commissioned by <a href='https://thephotographersgallery.org.uk/'>The Photographers’ Gallery.</a></em>
             </p>
             <br>
