--- a/cluster_11.html
+++ b/cluster_11.html
@@ -20,7 +20,7 @@
     </nav>
     <div id="outer">
     <p id="instructions">
-        <span id="desktop-only">Click and drag a layer to view it's provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
+        <span id="desktop-only">Click and drag a layer to view its provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
         <a href="./cluster_11.html">Click here to reset→</a>             
     </p>
     <div id="inner">
@@ -30,7 +30,7 @@
         </div>
 
         <div id="text">
-            <h1>Close-up portrait of a couple where the woman is on the right-hand side of the image.</h1><p>Composite of 18 photographs from R. Dasen Studio in Karaikudi, Balu Art Studio in Erode, Tamilnadu Studio and New Studio in Madurai, Raju's Electric Studio in Pollachi, Navajeevan Studio in Theni, Imperial Studio in Thoothukudi and other unidentified studios. Two of the images are from the artist's family archive, the rest are from stars.archive.“In my own family album, photographs of weddings or of couples shortly after marriage are probably the most common archetype. It makes me think of the cultural and financial significance placed on marriage. In the stars.archive I noticed many images of what appear to be portraits of married couples. I'm also interested in whether the wife is on the husband's left or right. Anecdotally, my grandmother mentioned to me that in Tamil, ‘இடம் means left. இடம் also means place. So, if you give இடம் to your wife, she will take your place.’  However, despite this, in all these photographs, wives are to the left of their husbands. In these close-up portraits, you can also really see details like nose rings, flowers, textile patterns, ties, or the presence/absence of a bindi.”</p>
+            <h1>Close-up portrait of a couple where the woman is on the right-hand side of the image.</h1><p>Composite of 14 photographs from R. Dasen Studio in Karaikudi, Balu Art Studio in Erode, Tamilnadu Studio and New Studio in Madurai, Raju's Electric Studio in Pollachi, Navajeevan Studio in Theni, Imperial Studio in Thoothukudi and other unidentified studios. Two of the images are from the artist's family archive, the rest are from stars.archive.“In my own family album, photographs of weddings or of couples shortly after marriage are probably the most common archetype. It makes me think of the cultural and financial significance placed on marriage. In the stars.archive I noticed many images of what appear to be portraits of married couples. I'm also interested in whether the wife is on the husband's left or right. Anecdotally, my grandmother mentioned to me that in Tamil, ‘இடம் means left. இடம் also means place. So, if you give இடம் to your wife, she will take your place.’  However, despite this, in all these photographs, wives are to the left of their husbands. In these close-up portraits, you can also really see details like nose rings, flowers, textile patterns, ties, or the presence/absence of a bindi.”</p>
         </div>
     </div>
     </div>
