--- a/cluster_10.html
+++ b/cluster_10.html
@@ -19,7 +19,7 @@
     </nav>
     <div id="outer">
     <p id="instructions">
-        <span id="desktop-only">Click and drag a layer to view it's provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
+        <span id="desktop-only">Click and drag a layer to view its provenance.</span><span id="mobile-only">Tap and hold a layer to view it's provenance. Tap again to move past the layer.</span><br>
         <a href="./cluster_10.html">Click here to reset→</a>             
     </p>
     <div id="inner">
