--- a/about.html
+++ b/about.html
@@ -11,32 +11,46 @@
 </head>
 <body>
 
-    <nav>
-
-        <a href="./"><img class='kolam' src="./kolam.svg"></a>
+    <nav id="desktop-nav">
+        <a href="./kolam.html"><img class='kolam' src="./kolam.svg"></a>
         <a href="./about.html">About</a>
         <a href="./video.html">Video</a>
-        <a href="./tsne.html">Categorisation</a>
+        <a href="./categorisation.html">Categorisation</a>
+        <a href="./credits.html">Credits</a>
+    </nav>
+    <img id="mobile-nav-trigger" class='kolam' src="./kolam.svg">
+    <nav id="mobile-nav">
+        <a href="./kolam.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./video.html">Video</a>
+        <a href="./categorisation.html">Categorisation</a>
+        <a href="./credits.html">Credits</a>
     </nav>
     <div id="outer">
         <div class="intro">
             <br>
             <p>
-            <strong>A·kin</strong> is a project by <a href="https://aarati.online">Aarati Akkapeddi</a> exploring human and non-human categorisation of photographic archives. The work highlights issues in grasping anthropological, historical and cultural notions about personal and collective identity when photographs are considered as mere data points.
-            </p>
-            <p>
             A·kin takes artist Aarati Akkapeddi’s family photo album as its starting point. Akkapeddi combines these personal photographs, from the south Indian state Tamil Nadu, with images from the <a href="https://stars.hypotheses.org/">Studies in Tamil Studio Archives and Society Archive</a> (stars.archive), a collection that investigates the history of South Indian studio photography between the 1880s and the 1980s.
             </p>
-            <p>The installation at The Photographers’ Gallery takes the shape of a 'kolam', where patterns are traditionally drawn with rice flour by women on their home entrance to welcome all but the evil spirits. In this case, the kolam is formed by groupings of photographs organised on a grid by an image classification algorithm, and assembled on clusters by Akkapeddi’s own artistic intervention. Each group is represented by a central image, a composite averaging all of the images within the cluster. At the centre of the wall <a href="/video.html">a video</a> includes oral interviews with family members reflecting on their diasporic identity. stars.archive researchers also share insights on the particularities of eastern studio archives and family albums in relation to a more western view.</p>
+            <p>The work takes the shape of a Kolam where patterns are traditionally drawn with rice flour by women on their home entrance to welcome all but the evil spirits. In this case, the kolam –similarly installed at The Photographers’ Gallery Archive Display¬– is formed by groupings of photographs organised on a grid by an image classification algorithm, and assembled on clusters by Akkapeddi’s own artistic intervention. The technical details and problematic possibilities of algorithmic categorisation that lay at the core of the project are shared <a href='./categorisation.html'>here</a></p>
+            <p>Each group in the kolam is represented by a central image, a composite averaging all of the images within the cluster. This website invites visitors to pull apart the composites and learn about the source and cultural insights of each photograph. </p>
+            <p>An accompanying <a href="./video.html">video</a> includes oral interviews with family members reflecting on the diasporic identity. Stars.archive researchers also share insights on the particularities of eastern studio archives and family albums in relation to a more western view.</p>
             <p>We invite you to <a style="margin-top:0;" href="mailto:aarati.akkapeddi@gmail.com">get in touch</a> to share additional information, send any question or request the removal of images of loved ones.
-            </p>
-            <p>A list of all the photography studios can be found <a style="margin-top:0;" href="./studios.html">here</a>.</p>
-            <p><em>A·kin is a project by <a href='https://aarati.online'>Aarati Akkapeddi</a> in collaboration with <a href='https://stars.hypotheses.org/'>stars.archive</a>, and commissioned by <a href='https://thephotographersgallery.org.uk/'>The Photographers’ Gallery.</a></em>
             </p>
             <br>
         </div>
     </div>
+    <script>
+      document.querySelector("#mobile-nav-trigger").addEventListener("click", function(){
+        if(document.querySelector("#mobile-nav").classList.contains("open")){
+            document.querySelector("#mobile-nav").classList.remove("open")
+        }else{
+            document.querySelector("#mobile-nav").classList.add("open")
+        }
+      })
+    </script>
     <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
- id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
+ id="utp" data-utp-url="https://unthinking.photography/articles/akin"
+ data-utp-pos=“top"></script>
 </body>
 </html>
