--- a/categorisation.html
+++ b/categorisation.html
@@ -8,11 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <a href="./"><img class='kolam' src="./kolam.svg"></a>
+    <nav id="desktop-nav">
+        <a href="./kolam.html"><img class='kolam' src="./kolam.svg"></a>
         <a href="./about.html">About</a>
         <a href="./video.html">Video</a>
-        <a href="./tsne.html">Categorisation</a>
+        <a href="./categorisation.html">Categorisation</a>
+        <a href="./credits.html">Credits</a>
+    </nav>
+    <img id="mobile-nav-trigger" class='kolam' src="./kolam.svg">
+    <nav id="mobile-nav">
+        <a href="./kolam.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./video.html">Video</a>
+        <a href="./categorisation.html">Categorisation</a>
+        <a href="./credits.html">Credits</a>
     </nav>
     <div class="grid-intro intro">
         VGG-16 is a neural network model for object detection and image classification proposed by Karen Simonyan and Andrew Zisserman at the University of Oxford. The pre-trained model is trained on images from <a href="https://www.image-net.org/">ImageNet</a> and uses 1000 classification categories:
@@ -1212,7 +1221,17 @@ The distance between the embeddings is much higher at 1.0102533549070358.
 
     </div>
     <script src="tsne.js"></script>
+    <script>
+        document.querySelector("#mobile-nav-trigger").addEventListener("click", function(){
+          if(document.querySelector("#mobile-nav").classList.contains("open")){
+              document.querySelector("#mobile-nav").classList.remove("open")
+          }else{
+              document.querySelector("#mobile-nav").classList.add("open")
+          }
+        })
+      </script>
     <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
- id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
+ id="utp" data-utp-url="https://unthinking.photography/articles/akin"
+ data-utp-pos=“top"></script>
 </body>
 </html>
