--- a/studios.html
+++ b/studios.html
@@ -8,11 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <a href="./"><img class='kolam' src="./kolam.svg"></a>
+    <nav id="desktop-nav">
+        <a href="./kolam.html"><img class='kolam' src="./kolam.svg"></a>
         <a href="./about.html">About</a>
         <a href="./video.html">Video</a>
-        <a href="./tsne.html">Categorisation</a>
+        <a href="./categorisation.html">Categorisation</a>
+        <a href="./credits.html">Credits</a>
+    </nav>
+    <img id="mobile-nav-trigger" class='kolam' src="./kolam.svg">
+    <nav id="mobile-nav">
+        <a href="./kolam.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./video.html">Video</a>
+        <a href="./categorisation.html">Categorisation</a>
+        <a href="./credits.html">Credits</a>
     </nav>
     <div class="intro">
         <ul>
@@ -60,7 +69,17 @@
 
         </ul>
     </div>
+    <script>
+        document.querySelector("#mobile-nav-trigger").addEventListener("click", function(){
+          if(document.querySelector("#mobile-nav").classList.contains("open")){
+              document.querySelector("#mobile-nav").classList.remove("open")
+          }else{
+              document.querySelector("#mobile-nav").classList.add("open")
+          }
+        })
+      </script>
     <script src="https://unthinking.photography/assets/affiliate/affiliate.js"
- id="utp" data-utp-url="https://unthinking.photography/articles/akin" data-utp-pos="bottom"></script>
+    id="utp" data-utp-url="https://unthinking.photography/articles/akin"
+    data-utp-pos=“top"></script>
 </body>
 </html>
